      ::hasOrMadeRecentPrimaryChanges()
  - ILoadBalancer::pendingMasterChangeCallers() ->
      ::pendingPrimaryChangeCallers()
  - ILoadBalancer::forEachOpenMasterConnection() ->
      ::forEachOpenPrimaryConnection()
  - ILoadBalancer::waitForMasterPos() -> ::waitForPrimaryPos()
  - Database::assertIsWritableMaster() -> ::assertIsWritablePrimary()
* wfIncrStats(), deprecated in 1.36, now emits deprecation warnings.
* wfCanIPUseHTTPS() is now deprecated, and always returns true.
* The UserLoadFromDatabase hook has been deprecated. It had no known uses.
* AbstractAuthenticationProvider ::setLogger(), ::setManager(), ::setConfig(),
  ::setHookContainer() were soft deprecated. Use ::init() to inject
  dependencies or override ::postInitSetup() to do any custom
  post-initialization configuration.
* The following methods in ApiPageSet have been deprecated:
   - getTitles(), use getTargets() instead.
   - getGoodTitles(), use getGoodPages() instead.
   - getMissingTitles(), use getMissingPages() instead.
   - getGoodAndMissingTitles(), use getGoodAndMissingPages() instead.
   - getRedirectTitles(), use getRedirectTargets() instead.
   - getSpecialTitles(), use getSpecialPages() instead.
* The following functions from the User class, deprecated in 1.35, now emit
  deprecation warnings:
   - getOptions
   - isIP
   - isUsableName
   - isCreatableName
   - getCanonicalName
   - addAutopromoteOnceGroups
   - getEffectiveGroups
   - getAutomaticGroups
   - getFormerGroups
   - getIntOption
* The following methods in User were deprecated:
  - ::idFromName - use UserIdentityLookup::getUserIdentityByName instead.
  - ::resetIdByNameCache - in tests, reset service container. No replacement
    needed in production code.
* Use of ActorMigration for any table except revision, deprecated in 1.34, now
  emits deprecation warnings. Instead of getInsertValues(), use
  ActorNormalization::acquireActorId(). Instead of getWhere() and getJoin(),
  do your own join on the actor table.