@@ -65,7 +65,7 @@ abstract class ChangeTagsList extends RevisionListBase {
 	/**
 	 * Reload the list data from the primary DB.
 	 */
-	public function reloadFromMaster() {
+	public function reloadFromPrimary() {
 		$dbw = wfGetDB( DB_PRIMARY );
 		$this->res = $this->doQuery( $dbw );
 	}
