@@ -491,6 +491,7 @@ because of Phabricator reports.
       ::forEachOpenPrimaryConnection()
   - ILoadBalancer::waitForMasterPos() -> ::waitForPrimaryPos()
   - Database::assertIsWritableMaster() -> ::assertIsWritablePrimary()
+  - RevDelList::reloadFromMaster -> ::reloadFromPrimary()
 * wfIncrStats(), deprecated in 1.36, now emits deprecation warnings.
 * wfCanIPUseHTTPS() is now deprecated, and always returns true.
 * The UserLoadFromDatabase hook has been deprecated. It had no known uses.
